feat: add structure (wip)

--- a/css/style.css
+++ b/css/style.css
@@ -11,25 +11,56 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: sans-serif;
+}
+
 .wrapper {
     width: 100%;
     height: 100vh;
     /* display: flex; */
     /* debug */
-    border: 1px solid red;
+    border: 2px solid red;
 }
 
 .top-col {
 
     width: 100%;
     height: calc(100% - 80px);
-    border: 1px solid purple;
+    border: 2px solid purple;
     
 }
 
 .bottom-col {
 width: 100%;    
 height: 80px;
-border: 1px solid green;
+border: 2px solid green;
 }
 
+/* 2-level */
+
+.left-col {
+    width: 200px;
+    height: calc(100% - 80px);
+    border: 2px solid orange;
+
+}
+
+/* .side-bar-items{
+    /* display: flex; */
+
+
+.side-bar-list li{
+    margin-bottom: 10px;
+}
+
+.right-col {
+    width: calc(100% - 200px);
+    
+    border: 3px solid ;
+}
+
+.content {
+    height: calc(100% - 80px);
+    
+}
