--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ body {
     font-family: sans-serif;
 }
 
+img {
+    max-width: 100%;
+}
+
 .wrapper {
     width: 100%;
     height: 100vh;
@@ -46,6 +50,8 @@ border: 2px solid green;
     width: 200px;
     /* height: calc(100% - 80px); */
     border: 2px solid orange;
+    background-color: black;
+    color: white;
 
 }
 
@@ -53,8 +59,13 @@ border: 2px solid green;
     /* display: flex; */
 
 
-.side-bar-list li{
+.side-bar-list li  {
     margin-bottom: 10px;
+    color: white;
+}
+
+a {
+    color: white;
 }
 
 /* genitore overflow and calc */
@@ -64,10 +75,21 @@ border: 2px solid green;
     overflow: auto;
 }
 
+/* check this later */
 .header {
-    padding: 30px;
+    padding: 20px;
+    position: fixed;
+    top:0;
+    right:0;
+    left:200px;
+    z-index: 1000;
+
+    /* debug */
+    border: 1px solid black;
     background-color: beige;
-    
+    display: flex;
+    justify-content: flex-end;
+   
 }
 
 /* height: 100% del genitore(top-col) */
@@ -76,6 +98,33 @@ border: 2px solid green;
     padding-top: 20px;
     /* overflow: auto;*/
     background-color:azure;
+}
+
+.btn {
+text-decoration:none;
+background-color: white;
+Padding: 10px 20px;
+Border-radius:30px;
+Font-size: 0.7rem;
+color:black;
+border:1px solid black;
+}
+
+.side-bar-items {
+display: flex;
+flex-direction: column;
+gap: 30px;
+}
+
+.side-top {
+   
+}
+
+
+.logo-img {
+    /* width:40px; */
+    height: 40px;
+    
 }
 
 
