--- a/css/style.css
+++ b/css/style.css
@@ -71,35 +71,36 @@ border: 2px solid green;
 /* check this later */
 .header {
     padding: 20px;
+    
    
 
     /* debug */
-    border: 1px solid black;
-    background-color: beige;
+    border: 2px solid violet;
+    background-color: black;
     display: flex;
-    justify-content: flex-end;
-   
+    justify-content: flex-end; 
 }
 
 /* height: 100% del genitore(top-col) */
 .content {
     height: 100%; 
-    padding-top: 20px;
+    padding: 30px 30px 30px ;
     /* overflow: auto;*/
-    background-color:azure;
+    /* background-color:azure; */
 }
 
 .btn {
 text-decoration:none;
-background-color: white;
+background-color: black;
 Padding: 10px 20px;
 Border-radius:30px;
 Font-size: 0.7rem;
-color:black;
-border:1px solid black;
+color:white;
+border:1px solid white;
 }
 
 .side-bar-items {
+padding-left: 10px;
 display: flex;
 flex-direction: column;
 justify-content:space-between ;
@@ -186,6 +187,32 @@ a {
     padding-bottom: 10px;
 }
 
+.albums-row {
+   display: flex;
+    flex-wrap: wrap;   
+}
+
+.album-col {
+     width: calc(100% / 6);
+    
+    /* debug */
+    /* border: 1px solid black; */
+    min-height: 20px;
+    text-align: center;
+}
+
+.card {
+    padding: 20px;
+}
+
+.subtitle {
+    font-size: 10px;
+}
+
+.title-subtitle {
+    padding-left: 20px;
+
+}
 
 /************************************************
    TABLET
