--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,8 @@ border: 2px solid green;
     border: 2px solid violet;
     background-color: black;
     display: flex;
-    justify-content: flex-end; 
+    justify-content: flex-end;
+   
 }
 
 /* height: 100% del genitore(top-col) */
@@ -86,7 +87,7 @@ border: 2px solid green;
     height: 100%; 
     padding: 30px 30px 30px ;
     /* overflow: auto;*/
-    /* background-color:azure; */
+    background-color:azure;
 }
 
 .btn {
@@ -211,7 +212,18 @@ a {
 
 .title-subtitle {
     padding-left: 20px;
+}
 
+.circle-album {
+    border: 1px solid black;
+    width: 170px;
+    height: 170px;
+    display: inline-block;
+    border-radius: 50%;
+    line-height: 170px;
+    text-align: center;
+    /* font-size: 10px; */
+    
 }
 
 /************************************************
