--- a/css/style.css
+++ b/css/style.css
@@ -13,18 +13,23 @@
 
 body {
     font-family: sans-serif;
+    color: white;
 }
 
 img {
     max-width: 100%;
 }
 
+.white {color: white;}
+
+.grey {color: #7D7F84;}
+
 .wrapper {
     width: 100%;
     height: 100vh;
     /* display: flex; */
     /* debug */
-    border: 2px solid red;
+    /* border: 2px solid red; */
     
 }
 
@@ -33,14 +38,16 @@ img {
 
     width: 100%;
     height: calc(100% - 80px);
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     display: flex;
 }
 
 .bottom-col {
 width: 100%;    
 height: 80px;
-border: 2px solid green;
+background-color: #282828;
+/* debug */
+/* border: 2px solid green; */
 }
 
 /* 2-level */
@@ -48,8 +55,8 @@ border: 2px solid green;
 .left-col {
     width: 200px;
     /* height: calc(100% - 80px); */
-    border: 2px solid orange;
-    background-color: black;
+    /* border: 2px solid orange; */
+    background-color: #000000;
     color: white;
 
 }
@@ -60,16 +67,17 @@ border: 2px solid green;
 /* genitore overflow and calc */
 .right-col {
     width: calc(100% - 200px);
-    border: 3px solid blue;
     overflow: auto;
+    
+    /* border: 3px solid blue; */
 }
 
 /* check this later */
 .header {
     padding: 20px;
     /* debug */
-    border: 2px solid violet;
-    background-color: black;
+    /* border: 2px solid violet; */
+    background-color: #080B12;
     display: flex;
     justify-content: flex-end;  
 }
@@ -79,7 +87,7 @@ border: 2px solid green;
     height: 100%; 
     padding: 30px 30px 30px ;
     /* overflow: auto;*/
-    background-color:azure;
+    background-color:#141922;
 }
 
 .btn {
@@ -90,6 +98,22 @@ Border-radius:30px;
 Font-size: 0.7rem;
 color:white;
 border:1px solid white;
+}
+
+.nav-menu {
+
+    /* border: 1px solid white; */
+    padding-bottom: 30px;
+}
+
+.nav-menu-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    list-style: none;
+    gap: 30px;
+    font-size: 15PX;
 }
 
 .side-bar-items {
@@ -103,7 +127,7 @@ height: 100%;
 
 .side-bar-list li {
     margin-bottom: 10px;
-    color: white;
+    color: #7D7F84;;
     padding: 5px;
     font-size: 10px;
 }
@@ -121,7 +145,8 @@ h4 {
 }
 
 a {
-    color: white;
+    color: #7D7F84;
+    text-decoration: none;
 }
 
 /* .side-top {
@@ -159,7 +184,6 @@ a {
 .john-doe .circle-profile,
 .john-doe .john-doe-title {
     vertical-align: middle;
-
 }
 
 .circle-profile {
@@ -215,7 +239,10 @@ a {
     line-height: 170px;
     text-align: center;
     /* font-size: 10px; */
-    
+}
+
+.bottom-col {
+    background-color: black;
 }
 
 /************************************************
@@ -241,19 +268,14 @@ a {
         height: 100%;
         padding: 30px 5px 5px;
         /* overflow: auto;*/
-        background-color: azure;
-
+        background-color: #141922;
     }
 
         .title-subtitle {
             padding-left: 5px;
         }
 
- 
     }
-
-
-
 
  /************************************************
    MOBILE
@@ -291,7 +313,7 @@ a {
 
     .circle-profile {margin-top: 20px;
     font-size: 50px;}
-    ---------------------
+    
      .top-col {
     
      width: 100%;
@@ -305,5 +327,4 @@ a {
         width: calc(100% - 60px);
     }
                
-
 }
